questions de cours

--- a/Lab_final_klaris.ipynb
+++ b/Lab_final_klaris.ipynb
@@ -1725,11 +1725,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO COMPLETE"
+    "# LES VALEURS POUVANT ETRE CALCULEES SONT :\n",
+    "\n",
+    "# Ix, Iy et It, respectivement, dérivée spatiale selon x, selon y et dérivée temporelle entre les deux images"
    ]
   },
   {
@@ -1741,11 +1743,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO COMPLETE"
+    "# PAR CONSEQUENT\n",
+    "\n",
+    "#vx et vy ne peuvent pas être calculées sans informations supplémentaires (composantes du flot)"
    ]
   },
   {
