--- a/Lab_final_klaris.ipynb
+++ b/Lab_final_klaris.ipynb
@@ -1802,11 +1802,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO COMPLETE"
+    "# POUR QUE CETTE EQUATION SOIT RESOLVABLE, IL FAUT QUE A.T A SOIT INVERSIBLE"
    ]
   },
   {
@@ -1818,11 +1818,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO COMPLETE"
+    "# Les coins de Harris sont des zones où l’intensité change dans toutes les directions\n",
+    "# Or pour que Lucas-Kanade fonctionne bien, il faut pouvoir estimer le mouvement dans deux directions\n",
+    "# Donc ça en fait de bonnes caractéristiques pour utiliser la méthode de Lucas-Kanade"
    ]
   },
   {
